<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffe0b3"
        android:orientation="vertical"
        tools:context="com.example.archit.quizapp.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Question1"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/q1" />

            <RadioGroup
                android:id="@+id/radioGroupOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionOneOptionOne"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_CorrectAnswerOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionOneOptionTwo"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionOneOptionThree"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Question2"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/q2" />

            <RadioGroup
                android:id="@+id/radioGroupTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionTwoOptionOne"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_CorrectAnswerTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionTwoOptionTwo"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionTwoOptionThree"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Question3"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/q3" />

            <RadioGroup
                android:id="@+id/radioGroupThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionThreeOptionOne"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionThreeOptionTwo"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_CorrectAnswerThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionThreeOptionThree"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Question4"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/q4" />

            <RadioGroup
                android:id="@+id/radioGroupFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_CorrectAnswerFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionFourOptionOne"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionFourOptionTwo"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionFourOptionThree"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Question5"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/q5" />

            <EditText
                android:id="@+id/userResponse_AnswerFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/Typehere"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Question6"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/q6" />

            <EditText
                android:id="@+id/userResponse_AnswerSix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/Typehere"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Question7"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/q7" />

            <RadioGroup
                android:id="@+id/radioGroupFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionSevenOptionOne"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionSevenOptionTwo"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rb_CorrectAnswerSeven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="10dp"
                    android:text="@string/RadioButtonQuestionSevenOptionThree"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Question8"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/q8" />

            <CheckBox
                android:id="@+id/cb_CorrectAnswerEight_1"
                style="@style/CustomCheckBoxStyle"
                android:text="@string/CheckBoxQuestionEightOptionOne"
                android:textColor="@color/text_color" />

            <CheckBox
                android:id="@+id/cb_CorrectAnswerEight_2"
                style="@style/CustomCheckBoxStyle"
                android:text="@string/CheckBoxQuestionEightOptionTwo"
                android:textColor="@color/text_color" />

            <CheckBox
                android:id="@+id/cb_WrongAnswerEight"
                style="@style/CustomCheckBoxStyle"
                android:text="@string/CheckBoxQuestionEightOptionThree"
                android:textColor="@color/text_color" />

            <CheckBox
                android:id="@+id/cb_CorrectAnswerEight_3"
                style="@style/CustomCheckBoxStyle"
                android:text="@string/CheckBoxQuestionEightOptionFour"
                android:textColor="@color/text_color" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:onClick="SubmitResponse"
                android:text="@string/ButtonSubmit" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:onClick="ResetQuiz"
                android:text="@string/ButtonReset" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>